move simulator extensions from tactics to cml